examples/fail/opt.xyz
4
Properties=species:S:1:pos:R:3 energy=-259.40095 dipole="-0.3612171702267257 -0.3687121662660122 0.317079971328705" pbc="F F F"
C        0.00209000       0.00951000       0.00201000
C        0.01834000      -1.19181000      -0.00451000
H       -0.45168221      -0.29271909       0.76671817
H       -0.86559666      -1.82145040       0.39329634
